--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <body>
     <nav class="navbar">
       <div class="menu-container">
-        <div class="logo"><img src="https://dynamic.brandcrowd.com/preview/logodraft/b1fee37e-91a2-4205-9d2a-9d361cd19e7a/image/large.png" style="max-height:50px"/></div>
+        <div class="logo">
+          <img
+            src="https://dynamic.brandcrowd.com/preview/logodraft/b1fee37e-91a2-4205-9d2a-9d361cd19e7a/image/large.png"
+            style="max-height: 50px"
+          />
+        </div>
         <div class="menu">
           <ul class="menu-items">
             <li><a href="#">Home</a></li>
@@ -22,17 +27,30 @@
     </nav>
     <section id="home">
       <h1>I am Ralphy Nixon a web developer.</h1>
-      <h2>Looking foward to designing programs,creating applications and
-        photographing skills.</h2>
+      <h2>
+        Looking foward to designing programs,creating applications and
+        photographing skills.
+      </h2>
       <h3>Am currently a student at glad learning more about web design.</h3>
     </section>
 
     <div class="pic">
-        <img src="https://dynamic.brandcrowd.com/preview/logodraft/b1fee37e-91a2-4205-9d2a-9d361cd19e7a/image/large.png" style="max-height:350px" style="max-height:350px"/>
-        <img src="https://dynamic.brandcrowd.com/asset/merch/cc459cb7-535d-4392-9c5a-f45e6b8ccb61/brand-page-laptop-on-desk.png?v=4&text=&w=800" style="max-height:350px"/>
-        
-         <img src="https://dynamic.brandcrowd.com/preview/logodraft/91500483-86df-4251-bde1-a1abaec7cd66/image/large.png" style="max-height:350px" style="max-height:350px"/>
-         <img src="Logo Decoration.png" style="max-height:350px"/>
-        </div>
-  </body
+      <img
+        src="https://dynamic.brandcrowd.com/preview/logodraft/b1fee37e-91a2-4205-9d2a-9d361cd19e7a/image/large.png"
+        style="max-height: 350px"
+        style="max-height: 350px"
+      />
+      <img
+        src="https://dynamic.brandcrowd.com/asset/merch/cc459cb7-535d-4392-9c5a-f45e6b8ccb61/brand-page-laptop-on-desk.png?v=4&text=&w=800"
+        style="max-height: 350px"
+      />
+
+      <img
+        src="https://dynamic.brandcrowd.com/preview/logodraft/91500483-86df-4251-bde1-a1abaec7cd66/image/large.png"
+        style="max-height: 350px"
+        style="max-height: 350px"
+      />
+      <img src="Logo Decoration.png" style="max-height: 350px" />
+    </div>
+  </body>
 </html>
