--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+<!--<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Ralphy Nixon</title>
+    <link rel="stylesheet"href="styles.css"/>
+  </head>
+  <body>
+    <nav class="navbar">
+        <div class="menu-container">
+        <div class="logo">My Logo</div>
+        <div class="menu">
+            <ul class="menu-items">
+                <li><a href="#">Home</a> </li>
+                <li><a href="#">Projects</a> </li>
+                <li><a href="#">Cv</a> </li>
+                <li><a href="#">Contact</a> </li>
+            </ul>
+        </div>
+        </div>
+    </nav>
+  </body>
+</html>-->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -38,7 +62,6 @@
       <img
         src="https://dynamic.brandcrowd.com/preview/logodraft/b1fee37e-91a2-4205-9d2a-9d361cd19e7a/image/large.png"
         style="max-height: 350px"
-        style="max-height: 350px"
       />
       <img
         src="https://dynamic.brandcrowd.com/asset/merch/cc459cb7-535d-4392-9c5a-f45e6b8ccb61/brand-page-laptop-on-desk.png?v=4&text=&w=800"
@@ -48,9 +71,8 @@
       <img
         src="https://dynamic.brandcrowd.com/preview/logodraft/91500483-86df-4251-bde1-a1abaec7cd66/image/large.png"
         style="max-height: 350px"
-        style="max-height: 350px"
       />
-      <img src="Logo Decoration.png" style="max-height: 350px" />
+      <img src="logo.png" style="max-height: 350px" />
     </div>
   </body>
 </html>
