--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar">
       <div class="menu-container">
-        <div class="logo"><img src="https://dynamic.brandcrowd.com/preview/logodraft/b1fee37e-91a2-4205-9d2a-9d361cd19e7a/image/large.png" style="max-height:50px"/></div>
+        <div class="logo"><img src="https://dynamic.brandcrowd.com/preview/logodraft/b1fee37e-91a2-4205-9d2a-9d361cd19e7a/image/large.png"/></div>
         <div class="menu">
           <ul class="menu-items">
             <li><a href="index.html">Home</a></li>
